feat: #28: change the interaction protocol and make adjustments to the backend
