# server/src/main/java/org/editor/entity/dto/CanvasDto.java
@@ -1,7 +1,9 @@
 package org.editor.entity.dto;
 
 import java.time.LocalDateTime;
+
 import lombok.Builder;
 
 @Builder
-public record CanvasDto(String id, String title, LocalDateTime createdAt, LocalDateTime updatedAt, String state) {}
+public record CanvasDto(String id, String content, LocalDateTime createdAt, LocalDateTime updatedAt) {
+}
